# spira

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  ROADMAP.md  spira_cache.db
scripts/: build.sh  install.sh
spira-core/: Cargo.toml
spira-core/src/: lib.rs  types.rs
spira-core/src/cve/: mod.rs
spira-core/src/scanners/: firewall.rs  kernel.rs  logs.rs  mod.rs  network.rs  packages.rs  permissions.rs  rootkit.rs  users.rs
spira-core/src/system/: mod.rs
spira-gui/: Cargo.toml
spira-gui/src/: app.rs  main.rs
src/: cli.rs  lib.rs  main.rs
src/audit/: firewall.rs  mod.rs  ssh.rs  sudoers.rs
src/cve/: cache.rs  matcher.rs  mod.rs  nvd.rs
src/reporter/: html.rs  json.rs  markdown.rs  mod.rs  terminal.rs
src/scanner/: distro.rs  kernel.rs  mod.rs  network.rs  package.rs  packages.rs  services.rs
src/utils/: mod.rs
tests/: cve_integration.rs
