[package]
name = "spira"
version = "0.1.0"
edition = "2021"
authors = ["spira"]
description = "Outil d'analyse de vulnérabilités pour systèmes Linux"
license = "MIT"
repository = "https://github.com/aerab/spira"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "gzip", "brotli", "deflate", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"

[dev-dependencies]

[[bin]]
name = "spira"
path = "src/main.rs"
