[package]
name = "spira-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
serde.workspace = true
tokio.workspace = true
chrono.workspace = true
log.workspace = true
thiserror.workspace = true
async-trait = "0.1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
quick-xml = "0.36"
serde_json = "1"
semver = "1"
