[package]
name = "spira-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
spira-core = { path = "../spira-core" }

iced = { version = "0.13", features = ["tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread", "process", "fs"] }
chrono.workspace = true
log.workspace = true
env_logger = "0.11"
